Set a fixed height for single article images and switch off dark mode for now

--- a/sites/agrea.ph/theme/css/input.css
+++ b/sites/agrea.ph/theme/css/input.css
@@ -116,6 +116,10 @@ sup:not([class]) {
 .hero-image > div {
   @apply bg-right;
 }
+/* Single article featured image */
+.featured-image {
+  height:24rem;
+}
 .plyr {
   @apply rounded-lg;
 }
